# pranjan

./: README.md  pyproject.toml
config/: default.yaml
data/processed/: postflight_features.npy  synthetic_features.npy  synthetic_labels.npy
docs/: 00_PRAJNA_Document_Register.md  01_PRAJNA_Submission_Cover_Letter.md  02_PRAJNA_Executive_Brief.md  03_PRAJNA_Novelty_and_Prior_Art.md  04_PRAJNA_Requirements_Traceability_Matrix.md  05_PRAJNA_Quality_Assurance_Plan.md  06_PRAJNA_Advanced_Capabilities.md  07_PRAJNA_Formal_Verification.md  PRAJNA_Algorithm_Specification.md  PRAJNA_Evaluation_Framework.md  PRAJNA_Research_Proposal_ISTRAC.md  PRAJNA_System_Architecture_ICD.md  PRAJNA_Technical_Design_Document.md
prajna/: __init__.py  __main__.py  cli.py  config.py
prajna.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prajna/dashboard/: __init__.py
prajna/data/: __init__.py  preprocessor.py  synthetic_generator.py
prajna/engine/: __init__.py  aegis.py  clpx.py  kavach.py  local_detector.py  nlg.py  phyrag.py  postflight.py  sdwap.py  shakti.py  tgn.py
prajna/evaluation/: __init__.py
prajna/graph/: __init__.py
prajna/training/: __init__.py
scripts/: download_data.py  generate_application_letter.py  generate_pdf.py  generate_proposal_pdf.py
tests/: test_prajna.py
